app/styles/app.scss
@import 'materialize';
@import 'sidebar';
@import url(https://fonts.googleapis.com/css?family=Shadows+Into+Light);

body > .ember-view {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}

.brand-logo {
  font-family: 'Shadows Into Light', cursive;
  margin-bottom: 0;
  margin-top: 0;
}

nav .brand-logo {
  margin-left: 1vw;
  font-size: 2.5rem;
}

.cover-wrapper {
  width: 100%;
  height: 100%;
  min-height: 100vh;
  display: table;
  background: url(images/bg.jpg) no-repeat center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

.cover-container {
  text-align: center;
}

// Welcome area
.cover-heading {
  font-size: 10rem;
  margin-bottom: 2vh;
}

.inner {
  position: relative;
  margin-top: 20vh;
  // transform: translateY(80%);
}

.lead {
  margin-top: 0;
  margin-bottom: 3vh;
}

.btn-large {
  font-weight: bold;
  margin-left: 0.5vw;
  margin-right: 0.5vw;
}

.footer {
  position: absolute;
  bottom: 0;
  right: 0;
  margin-bottom: 1vh;
  margin-right: 1vw;
}

.main-content {
  padding-left: 280px;
  padding-right: 50px;
  padding-top: 30px;
}

.btn-toolbar {
  padding-top: 1vw;
}

.fb-connect-button {
  text-transform: none;
  font-size: 1.2rem;
}

.card {
  max-height: 200px;
}

.card.small .card-content {
  max-height: none;
}

.progress {
  margin: 0;
}

/* fluid 5 columns */
.grid-sizer,
.grid-item { width: 20%; }
/* 2 columns wide */
.grid-item--width2 { width: 40%; }


@media only screen and (max-width : 992px) {
  .main-content {
    padding-left: 0;
  }
}

